--- a/js_SandBox/03/4_3_project_files/tasklist/index.html
+++ b/js_SandBox/03/4_3_project_files/tasklist/index.html
@@ -32,7 +32,7 @@
               <label for="filter">Filter Tasks</label>
             </div>
             <ul class="collection"></ul>
-            <monkika href="#" class="clear-tasks btn black">Clear Tasks</d>
+            <a href="#" class="clear-tasks btn black">Clear Tasks</a>
           </div>
         </div>
       </div>
